--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
 asgiref==3.5.2
-distlib==0.3.6
-Django==3.2
+dj-database-url==1.0.0
+Django==4.1.3
 django-cors-headers==3.13.0
-django-filter==2.4.0
-django-rest-framework==0.1.0
-djangorestframework==3.12.2
-djangorestframework-simplejwt==4.6.0
-filelock==3.8.0
+django-heroku==0.3.1
+djangorestframework==3.14.0
 gunicorn==20.1.0
-platformdirs==2.5.3
-PyJWT==2.6.0
-pytz==2021.1
-sqlparse==0.4.1
-virtualenv==20.16.6
+psycopg2-binary==2.9.5
+pytz==2022.6
+sqlparse==0.4.3
 whitenoise==6.2.0
